rename TokenDTO to UserInfoDTO  (#72)
* Refactored code:
- login and register now returns only TokenDTO

* Refactored code:
- DB content RickRolled :)

* add ID in TokenDTO

* rename TokenDTO to UserInfoDTO and add login,firstName,lastName,image

---------

Co-authored-by: Maslyna <sanci324@gmail.com>