@@ -4,7 +4,7 @@ import com.provedcode.talent.model.entity.Talent;
 import com.provedcode.talent.repo.TalentRepository;
 import com.provedcode.user.model.Role;
 import com.provedcode.user.model.dto.RegistrationDTO;
-import com.provedcode.user.model.dto.SessionInfoDTO;
+import com.provedcode.user.model.dto.UserInfoDTO;
 import com.provedcode.user.model.entity.Authority;
 import com.provedcode.user.model.entity.UserInfo;
 import com.provedcode.user.repo.AuthorityRepository;
@@ -24,10 +24,12 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.time.Instant;
 import java.util.Collection;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import static java.time.temporal.ChronoUnit.MINUTES;
+import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @Service
 @AllArgsConstructor
@@ -40,28 +42,46 @@ public class AuthenticationServiceImpl implements AuthenticationService {
     PasswordEncoder passwordEncoder;
 
     @Transactional
-    public SessionInfoDTO login(String name, Collection<? extends GrantedAuthority> authorities) {
-        return new SessionInfoDTO("User {%s} log-in".formatted(name), generateJWTToken(name, authorities));
+    public UserInfoDTO login(String name, Collection<? extends GrantedAuthority> authorities) {
+        Optional<Long> id = userInfoRepository.findByLogin(name).map(userInfo -> userInfo.getTalentId());
+        if (id.isEmpty()) {
+            throw new ResponseStatusException(NOT_FOUND, String.format("talent with id = %d not found", id));
+        }
+
+        Optional<UserInfo> userInfo = userInfoRepository.findByLogin(name);
+        if (userInfo.isEmpty()) {
+            throw new ResponseStatusException(NOT_FOUND, String.format("talent with name = %s not found", name));
+        }
+        Optional<Talent> talent = talentEntityRepository.findById(userInfo.get().getTalentId());
+
+        return UserInfoDTO.builder()
+                .token(generateJWTToken(name, authorities))
+                .id(talent.get().getId())
+                .login(userInfo.get().getLogin())
+                .firstName(talent.get().getFirstName())
+                .lastName(talent.get().getLastName())
+                .image(talent.get().getImage())
+                .build();
     }
 
     @Transactional
-    public SessionInfoDTO register(RegistrationDTO user) {
+    public UserInfoDTO register(RegistrationDTO user) {
         if (userInfoRepository.existsByLogin(user.login())) {
             throw new ResponseStatusException(HttpStatus.CONFLICT,
-                                              String.format("user with login = {%s} already exists", user.login()));
+                    String.format("user with login = {%s} already exists", user.login()));
         }
         Talent talent = Talent.builder()
-                              .firstName(user.firstName())
-                              .lastName(user.lastName())
-                              .specialization(user.specialization())
-                              .build();
+                .firstName(user.firstName())
+                .lastName(user.lastName())
+                .specialization(user.specialization())
+                .build();
         talentEntityRepository.save(talent);
 
         UserInfo userInfo = UserInfo.builder()
-                                    .talentId(talent.getId())
-                                    .login(user.login())
-                                    .password(passwordEncoder.encode(user.password()))
-                                    .build();
+                .talentId(talent.getId())
+                .login(user.login())
+                .password(passwordEncoder.encode(user.password()))
+                .build();
         userInfo.setAuthorities(Set.of(authorityRepository.findByAuthority(Role.TALENT).orElseThrow()));
 
         userInfoRepository.save(userInfo);
@@ -72,8 +92,14 @@ public class AuthenticationServiceImpl implements AuthenticationService {
 
         log.info("user with login {%s} was saved, his authorities: %s".formatted(userLogin, userAuthorities));
 
-        return new SessionInfoDTO("User: {%s} was registered".formatted(userLogin),
-                                  generateJWTToken(userLogin, userAuthorities));
+        return UserInfoDTO.builder()
+                .token(generateJWTToken(userLogin, userAuthorities))
+                .id(talent.getId())
+                .login(userInfo.getLogin())
+                .firstName(talent.getFirstName())
+                .lastName(talent.getLastName())
+                .image(talent.getImage())
+                .build();
     }
 
     private String generateJWTToken(String name, Collection<? extends GrantedAuthority> authorities) {
@@ -81,13 +107,13 @@ public class AuthenticationServiceImpl implements AuthenticationService {
         log.info("=== POST /login === auth = {}", authorities);
         var now = Instant.now();
         var claims = JwtClaimsSet.builder()
-                                 .issuer("self")
-                                 .issuedAt(now)
-                                 .expiresAt(now.plus(60, MINUTES))
-                                 .subject(name)
-                                 .claim("scope", authorities.stream().map(GrantedAuthority::getAuthority)
-                                                            .collect(Collectors.joining(" ")))
-                                 .build();
+                .issuer("self")
+                .issuedAt(now)
+                .expiresAt(now.plus(60, MINUTES))
+                .subject(name)
+                .claim("scope", authorities.stream().map(GrantedAuthority::getAuthority)
+                        .collect(Collectors.joining(" ")))
+                .build();
         return jwtEncoder.encode(JwtEncoderParameters.from(claims)).getTokenValue();
     }
 
